# spaceinvaders-speedrun

./: LICENSE  README.md  pyproject.toml
src/spaceinvaders-speedrun/: conf.py  lib.py  main.py
src/spaceinvaders-speedrun/states/: game.py  menu.py
